[package]
name = "flyPath"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"# Dependency for crossbeam channel
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }  # Other dependencies for drone
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

[features]
modes=[]


[dev-dependencies]
toml = "0.8.19"
crossbeam-channel = "0.5.13"