[package]
name = "flyPath"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"# Dependency for crossbeam channel
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }  # Other dependencies for drone
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

[features]
modes=[]

[dev-dependencies]
toml = "0.8.19"
crossbeam-channel = "0.5.13"

[[example]]
name = "default_command" 
path = "examples/default/command.rs" 

[[example]]
name = "default_packet" 
path = "examples/default/packet.rs"

[[example]]
name = "default_flood_request" 
path = "examples/default/flood_request.rs"

[[example]]
name = "spicy_command" 
path = "examples/spicy/command.rs" 
required-features = ["modes"]

[[example]]
name = "spicy_packet" 
path = "examples/spicy/packet.rs"
required-features = ["modes"]

[[example]]
name = "spicy_flood_request" 
path = "examples/spicy/flood_request.rs"
required-features = ["modes"]